--- a/server/application/pom.xml
+++ b/server/application/pom.xml
@@ -26,6 +26,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.ehcache</groupId>
+		    <artifactId>ehcache</artifactId>
+		    <version>3.10.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
