--- a/server/application/pom.xml
+++ b/server/application/pom.xml
@@ -29,7 +29,11 @@
 		<dependency>
 		    <groupId>org.ehcache</groupId>
 		    <artifactId>ehcache</artifactId>
-		    <version>3.10.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.11.0</version>
 		</dependency>
 	</dependencies>
 
