--- a/server/pom.xml
+++ b/server/pom.xml
@@ -19,4 +19,13 @@
 		<module>application</module>
 	</modules>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-dependencies</artifactId>
+			<version>2021.0.4</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
+	</dependencies>
 </project>
