--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,16 @@
   "author": "Andrey Melnychenko <melnychenko.a@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "crypto-js": "^4.1.1"
   }
 }
