--- a/server/application/src/main/resources/application.properties
+++ b/server/application/src/main/resources/application.properties
@@ -13,3 +13,8 @@ management.endpoints.web.exposure.include=health,env,configprops,scheduledtasks,
 management.endpoint.env.enabled=true
 management.endpoint.beans.enabled=true
 management.endpoint.configprops.enabled=true
+
+spring.datasource.url=jdbc:h2:tcp://localhost/~/Programs/h2/data/serverDb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=securityPassword
