--- a/server/application/src/main/resources/application.properties
+++ b/server/application/src/main/resources/application.properties
@@ -15,3 +15,5 @@ management.endpoint.beans.enabled=true
 management.endpoint.configprops.enabled=true
 
 spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.maximum-pool-size=3
+spring.datasource.minimum-idle=1
