--- a/client/package.json
+++ b/client/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "client",
-  "version": "1.0.0",
-  "description": "testJsWithJava",
-  "main": "app.js",
-  "scripts": {
-    "start": "webpack serve --mode development --open",
-    "build": "webpack --mode production --config webpack.config.js"
-  },
-  "keywords": [
-    "js",
-    "javascript"
-  ],
-  "author": "Andrey Melnychenko <melnychenko.a@gmail.com>",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/crypto-js": "^4.1.1",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
-  },
-  "dependencies": {
-    "crypto-js": "^4.1.1"
-  }
+    "name": "client",
+    "version": "1.0.0",
+    "description": "testJsWithJava",
+    "main": "app.js",
+    "scripts": {
+        "start": "webpack serve --mode development --open",
+        "build": "webpack --mode production --config webpack.config.js",
+        "java_compile": "cd ./../server && mvn clean install",
+        "java_start": "cd ./../server/application && run.bat"
+    },
+    "keywords": [
+        "js",
+        "javascript"
+    ],
+    "author": "Andrey Melnychenko <melnychenko.a@gmail.com>",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/crypto-js": "^4.1.1",
+        "clean-webpack-plugin": "^4.0.0",
+        "css-loader": "^6.7.1",
+        "html-webpack-plugin": "^5.5.0",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.11.1"
+    },
+    "dependencies": {
+        "crypto-js": "^4.1.1"
+    }
 }
