--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
     "name": "client",
     "version": "1.0.0",
     "description": "testJsWithJava",
-    "main": "app.js",
+    "main": "index.js",
     "scripts": {
         "start": "webpack serve --mode development --open",
         "build": "webpack --mode production --config webpack.config.js",
@@ -17,15 +17,17 @@
     "license": "ISC",
     "devDependencies": {
         "@types/crypto-js": "^4.1.1",
+        "@types/materialize-css": "^1.0.11",
         "clean-webpack-plugin": "^4.0.0",
-        "css-loader": "^6.7.2",
+        "css-loader": "^6.7.3",
         "html-webpack-plugin": "^5.5.0",
         "style-loader": "^3.3.1",
         "webpack": "^5.75.0",
-        "webpack-cli": "^5.0.0",
-        "webpack-dev-server": "*"
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.11.1"
     },
     "dependencies": {
-        "crypto-js": "^4.1.1"
+        "crypto-js": "^4.1.1",
+        "materialize-css": "1.0.0-rc.2"
     }
 }
